WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
101648
[chromium] Deferred image decoding fails with image orientation
https://bugs.webkit.org/show_bug.cgi?id=101648
Summary
[chromium] Deferred image decoding fails with image orientation
Hin-Chung Lam
Reported
2012-11-08 14:36:08 PST
Failing tests: platform/chromium/virtual/deferred/fast/imaegs/exif-orientation-image-document.html platform/chromium/virtual/deferred/fast/imaegs/exif-orientation.html
Attachments
Patch
(105.05 KB, patch)
2012-11-08 14:51 PST
,
Hin-Chung Lam
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Hin-Chung Lam
Comment 1
2012-11-08 14:51:58 PST
Created
attachment 173125
[details]
Patch
Nico Weber
Comment 2
2012-11-08 14:56:49 PST
Comment on
attachment 173125
[details]
Patch lgtm
Stephen White
Comment 3
2012-11-08 15:57:50 PST
Comment on
attachment 173125
[details]
Patch Looks good, bots willing. r=me
WebKit Review Bot
Comment 4
2012-11-08 16:19:57 PST
Comment on
attachment 173125
[details]
Patch Clearing flags on attachment: 173125 Committed
r133972
: <
http://trac.webkit.org/changeset/133972
>
WebKit Review Bot
Comment 5
2012-11-08 16:20:01 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug