[chromium] Deferred image decoding fails with image orientation https://bugs.webkit.org/show_bug.cgi?id=101648

Reviewed by Stephen White.

Source/WebCore:

When an image is deferred save the orientation state. Once this state
is cached it can be used to reply future queries since this state is
static.

No new tests but platform/chromium/virtual/deferred/fast/images/image-orientation.html is passing now.

* platform/graphics/chromium/DeferredImageDecoder.cpp:
(WebCore::DeferredImageDecoder::DeferredImageDecoder):
(WebCore::DeferredImageDecoder::frameBufferAtIndex):
(WebCore::DeferredImageDecoder::orientation):
* platform/graphics/chromium/DeferredImageDecoder.h:
(DeferredImageDecoder):

LayoutTests:

Update test expectations and baselines accordingly since these two
tests are now passing with deferred image decoding.

fast/images/exif-orientation-image-document.html
fast/images/exif-orientation.html

* platform/chromium-linux/platform/chromium/virtual/deferred/fast/images/exif-orientation-image-document-expected.png: Removed.
* platform/chromium-mac-lion/platform/chromium/virtual/deferred/fast/images/exif-orientation-image-document-expected.png: Removed.
* platform/chromium-mac-snowleopard/platform/chromium/virtual/deferred/fast/images/exif-orientation-image-document-expected.png: Removed.
* platform/chromium-mac/platform/chromium/virtual/deferred/fast/images/exif-orientation-image-document-expected.png: Removed.
* platform/chromium-win/platform/chromium/virtual/deferred/fast/images/exif-orientation-image-document-expected.png: Removed.
* platform/chromium/TestExpectations:


git-svn-id: svn://svn.chromium.org/blink/trunk@133972 bbb929c8-8fbe-4397-9dbb-9b2b20218538