third_party/WebKit/Source/WebCore/platform/graphics/chromium/DeferredImageDecoder.h
@@ -68,6 +68,7 @@ private:
 
     String m_filenameExtension;
     IntSize m_size;
+    ImageOrientation m_orientation;
 
     ImageFrame m_lazyDecodedFrame;
 };
